fix list alignment

--- a/public/css/menus.css
+++ b/public/css/menus.css
@@ -137,6 +137,10 @@ td.menucell {
 }
 .menulist {
    cursor: pointer;
+
+   text-align-last: center;
+   -moz-text-align-last: center;
+   -ms-text-align-last: center;
 }
 .menufooter {
    width: 100%;
